manifests/dashy/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashy
